Working on interrupts

--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -20,13 +20,27 @@ compiling Timer.c...
 compiling Interrupt.c...
 compiling LED.c...
 linking...
-Program Size: Code=4616 RO-data=652 RW-data=28 ZI-data=516  
+Program Size: Code=4568 RO-data=652 RW-data=28 ZI-data=516  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
 Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
 Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
 Programming Done.
 Verify OK.
-</pre>
-</body>
-</html>
+ling Buzzer.c...
+compiling Timer.c...
+compiling Interrupt.c...
+compiling LED.c...
+linking...
+.\microwave.axf: Error: L6218E: Undefined symbol SW1_Input (referred from microwave.o).
+.\microwave.axf: Error: L6218E: Undefined symbol SW2_Input (referred from microwave.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 2 error messages.
+".\microwave.axf" - 2 Error(s), 2 Warning(s).
+Target not created
+r: L6218E: Undefined symbol SW1_Input (referred from microwave.o).
+.\microwave.axf: Error: L6218E: Undefined symbol SW2_Input (referred from microwave.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 3 error messages.
+".\microwave.axf" - 3 Error(s), 3 Warning(s).
+Target not created
