--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -4,7 +4,7 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  05/13/2022
+Project File Date:  05/17/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -20,8 +20,10 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-Program Size: Code=4964 RO-data=652 RW-data=24 ZI-data=608  
+Program Size: Code=5232 RO-data=652 RW-data=28 ZI-data=612  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
+212 RO-data=652 RW-data=28 ZI-data=612  
+".\microwave.axf" - 0 Error(s), 1 Warning(s).
