--- a/microwave.htm
+++ b/microwave.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\microwave.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\microwave.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Tue May 17 20:49:48 2022
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Tue May 17 22:31:50 2022
 <BR><P>
 <H3>Maximum Stack Usage =         92 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -1203,7 +1203,7 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[82]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__user_setup_stackheap
 </UL>
 
-<P><STRONG><a name="[86]"></a>main</STRONG> (Thumb, 134 bytes, Stack size 0 bytes, main.o(.text))
+<P><STRONG><a name="[86]"></a>main</STRONG> (Thumb, 126 bytes, Stack size 0 bytes, main.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 92<LI>Call Chain = main &rArr; cook_Beef_or_Chicken &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[94]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;start
@@ -1219,30 +1219,21 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[85]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
 
-<P><STRONG><a name="[2b]"></a>GPIOF_Handler</STRONG> (Thumb, 174 bytes, Stack size 8 bytes, main.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = GPIOF_Handler &rArr; pause &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
-</UL>
-<BR>[Calls]<UL><LI><a href="#[96]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;reset
-<LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
-</UL>
+<P><STRONG><a name="[2b]"></a>GPIOF_Handler</STRONG> (Thumb, 162 bytes, Stack size 0 bytes, main.o(.text))
 <BR>[Address Reference Count : 1]<UL><LI> startup_tm4c123.o(RESET)
 </UL>
-<P><STRONG><a name="[10]"></a>GPIOD_Handler</STRONG> (Thumb, 76 bytes, Stack size 8 bytes, main.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = GPIOD_Handler &rArr; pause &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
-</UL>
-<BR>[Calls]<UL><LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
-</UL>
+<P><STRONG><a name="[10]"></a>GPIOD_Handler</STRONG> (Thumb, 48 bytes, Stack size 0 bytes, main.o(.text))
 <BR>[Address Reference Count : 1]<UL><LI> startup_tm4c123.o(RESET)
 </UL>
-<P><STRONG><a name="[9c]"></a>SW1_Init</STRONG> (Thumb, 104 bytes, Stack size 0 bytes, switch.o(.text))
+<P><STRONG><a name="[9a]"></a>SW1_Init</STRONG> (Thumb, 104 bytes, Stack size 0 bytes, switch.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
-<P><STRONG><a name="[9d]"></a>SW2_Init</STRONG> (Thumb, 104 bytes, Stack size 0 bytes, switch.o(.text))
+<P><STRONG><a name="[9b]"></a>SW2_Init</STRONG> (Thumb, 104 bytes, Stack size 0 bytes, switch.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
-<P><STRONG><a name="[9e]"></a>SW3_Init</STRONG> (Thumb, 82 bytes, Stack size 0 bytes, switch.o(.text))
+<P><STRONG><a name="[9c]"></a>SW3_Init</STRONG> (Thumb, 82 bytes, Stack size 0 bytes, switch.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
@@ -1252,37 +1243,31 @@ Global Symbols
 
 <P><STRONG><a name="[e1]"></a>SW3_Input</STRONG> (Thumb, 10 bytes, Stack size 0 bytes, switch.o(.text), UNUSED)
 
-<P><STRONG><a name="[97]"></a>System_Init</STRONG> (Thumb, 26 bytes, Stack size 0 bytes, tiva.o(.text))
+<P><STRONG><a name="[95]"></a>System_Init</STRONG> (Thumb, 26 bytes, Stack size 0 bytes, tiva.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
 <P><STRONG><a name="[8c]"></a>microwave_Init</STRONG> (Thumb, 40 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 36<LI>Call Chain = microwave_Init &rArr; LCD_Init &rArr; LCD_Clear_Display &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
-<BR>[Calls]<UL><LI><a href="#[99]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;keypad_Init
-<LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;interrupt_Init
-<LI><a href="#[98]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;buzzer_Init
-<LI><a href="#[9b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Init
-<LI><a href="#[9a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
-<LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;System_Init
-<LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SW3_Init
-<LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SW2_Init
-<LI><a href="#[9c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SW1_Init
+<BR>[Calls]<UL><LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;keypad_Init
+<LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;interrupt_Init
+<LI><a href="#[96]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;buzzer_Init
+<LI><a href="#[99]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Init
+<LI><a href="#[98]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
+<LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;System_Init
+<LI><a href="#[9c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SW3_Init
+<LI><a href="#[9b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SW2_Init
+<LI><a href="#[9a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SW1_Init
 </UL>
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[a6]"></a>Check_Invalid</STRONG> (Thumb, 64 bytes, Stack size 0 bytes, microwave.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<P><STRONG><a name="[9e]"></a>pause</STRONG> (Thumb, 68 bytes, Stack size 8 bytes, microwave.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = pause &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
-
-<P><STRONG><a name="[a0]"></a>End_Operation</STRONG> (Thumb, 56 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
-</UL>
-<BR>[Calls]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;stop_Beep
-<LI><a href="#[a1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;beep
-<LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
-<LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Clear
+<BR>[Calls]<UL><LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
+<LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Clear
 <LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
 <LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
 <LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
@@ -1290,15 +1275,51 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
 </UL>
 
-<P><STRONG><a name="[a5]"></a>Time_Display</STRONG> (Thumb, 172 bytes, Stack size 8 bytes, microwave.o(.text))
+<P><STRONG><a name="[a1]"></a>reset</STRONG> (Thumb, 26 bytes, Stack size 8 bytes, microwave.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = reset
+</UL>
+<BR>[Calls]<UL><LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Clear
+</UL>
+<BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
+</UL>
+
+<P><STRONG><a name="[a6]"></a>Check_Invalid</STRONG> (Thumb, 64 bytes, Stack size 0 bytes, microwave.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+</UL>
+
+<P><STRONG><a name="[a2]"></a>End_Operation</STRONG> (Thumb, 60 bytes, Stack size 8 bytes, microwave.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+</UL>
+<BR>[Calls]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;stop_Beep
+<LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;beep
+<LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
+<LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Clear
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+</UL>
+<BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
+</UL>
+
+<P><STRONG><a name="[a5]"></a>Time_Display</STRONG> (Thumb, 204 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
-<BR>[Calls]<UL><LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<BR>[Calls]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<LI><a href="#[a1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;reset
+<LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
 <LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
 <LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
 <LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
 </UL>
 <BR>[Called By]<UL><LI><a href="#[94]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;start
+</UL>
+
+<P><STRONG><a name="[94]"></a>start</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, microwave.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 60<LI>Call Chain = start &rArr; Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
+</UL>
+<BR>[Calls]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
+</UL>
+<BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[92]"></a>Cook_Time</STRONG> (Thumb, 132 bytes, Stack size 16 bytes, microwave.o(.text))
@@ -1340,7 +1361,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[91]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 322 bytes, Stack size 56 bytes, microwave.o(.text))
+<P><STRONG><a name="[91]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 312 bytes, Stack size 56 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 92<LI>Call Chain = cook_Beef_or_Chicken &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dmul
@@ -1359,35 +1380,6 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[94]"></a>start</STRONG> (Thumb, 10 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 60<LI>Call Chain = start &rArr; Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
-</UL>
-<BR>[Calls]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-</UL>
-<BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
-</UL>
-
-<P><STRONG><a name="[95]"></a>pause</STRONG> (Thumb, 80 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = pause &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
-</UL>
-<BR>[Calls]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
-<LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Clear
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
-<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
-<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
-</UL>
-<BR>[Called By]<UL><LI><a href="#[10]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIOD_Handler
-<LI><a href="#[2b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIOF_Handler
-</UL>
-
-<P><STRONG><a name="[96]"></a>reset</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, microwave.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = reset
-</UL>
-<BR>[Calls]<UL><LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Clear
-</UL>
-<BR>[Called By]<UL><LI><a href="#[2b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIOF_Handler
-</UL>
-
 <P><STRONG><a name="[af]"></a>LCD_CMD</STRONG> (Thumb, 72 bytes, Stack size 8 bytes, lcd.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
@@ -1395,7 +1387,7 @@ Global Symbols
 <LI><a href="#[b1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysTick_Wait
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
-<LI><a href="#[9a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
+<LI><a href="#[98]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
 <LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
 </UL>
 
@@ -1404,17 +1396,17 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[af]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
 </UL>
-<BR>[Called By]<UL><LI><a href="#[9a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
+<BR>[Called By]<UL><LI><a href="#[98]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
 <LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
-<LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
+<LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
 <LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
 <LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 <LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[9a]"></a>LCD_Init</STRONG> (Thumb, 184 bytes, Stack size 8 bytes, lcd.o(.text))
+<P><STRONG><a name="[98]"></a>LCD_Init</STRONG> (Thumb, 184 bytes, Stack size 8 bytes, lcd.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = LCD_Init &rArr; LCD_Clear_Display &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[af]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
@@ -1440,15 +1432,15 @@ Global Symbols
 <LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
-<LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
+<LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
 <LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
 <LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 <LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[99]"></a>keypad_Init</STRONG> (Thumb, 206 bytes, Stack size 0 bytes, keypad.o(.text))
+<P><STRONG><a name="[97]"></a>keypad_Init</STRONG> (Thumb, 206 bytes, Stack size 0 bytes, keypad.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
@@ -1458,16 +1450,16 @@ Global Symbols
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[98]"></a>buzzer_Init</STRONG> (Thumb, 82 bytes, Stack size 0 bytes, buzzer.o(.text))
+<P><STRONG><a name="[96]"></a>buzzer_Init</STRONG> (Thumb, 82 bytes, Stack size 0 bytes, buzzer.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
-<P><STRONG><a name="[a1]"></a>beep</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, buzzer.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<P><STRONG><a name="[a3]"></a>beep</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, buzzer.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
 </UL>
 
 <P><STRONG><a name="[a4]"></a>stop_Beep</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, buzzer.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<BR><BR>[Called By]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
 </UL>
 
 <P><STRONG><a name="[b1]"></a>SysTick_Wait</STRONG> (Thumb, 36 bytes, Stack size 0 bytes, timer.o(.text))
@@ -1491,22 +1483,22 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[b0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
-<LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
+<LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
 <LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
 <LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 <LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[9b]"></a>LED_Init</STRONG> (Thumb, 106 bytes, Stack size 0 bytes, led.o(.text))
+<P><STRONG><a name="[99]"></a>LED_Init</STRONG> (Thumb, 106 bytes, Stack size 0 bytes, led.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
-<P><STRONG><a name="[a3]"></a>LED_Clear</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
-<LI><a href="#[96]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;reset
-<LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
+<P><STRONG><a name="[a0]"></a>LED_Clear</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<LI><a href="#[a1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;reset
+<LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
 </UL>
 
 <P><STRONG><a name="[e2]"></a>RedOn</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text), UNUSED)
@@ -1515,9 +1507,9 @@ Global Symbols
 
 <P><STRONG><a name="[e4]"></a>GreenOn</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text), UNUSED)
 
-<P><STRONG><a name="[a2]"></a>WhiteOn</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
-<LI><a href="#[95]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
+<P><STRONG><a name="[9f]"></a>WhiteOn</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
+<LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
 </UL>
 
 <P><STRONG><a name="[e5]"></a>RedToggle</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text), UNUSED)
@@ -1526,7 +1518,7 @@ Global Symbols
 
 <P><STRONG><a name="[e7]"></a>GreenToggle</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text), UNUSED)
 
-<P><STRONG><a name="[9f]"></a>interrupt_Init</STRONG> (Thumb, 156 bytes, Stack size 0 bytes, interrupt.o(.text))
+<P><STRONG><a name="[9d]"></a>interrupt_Init</STRONG> (Thumb, 156 bytes, Stack size 0 bytes, interrupt.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
