--- a/microwave.htm
+++ b/microwave.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\microwave.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\microwave.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Tue May 17 22:31:50 2022
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Tue May 17 23:41:56 2022
 <BR><P>
 <H3>Maximum Stack Usage =         92 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -1219,10 +1219,10 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[85]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
 
-<P><STRONG><a name="[2b]"></a>GPIOF_Handler</STRONG> (Thumb, 162 bytes, Stack size 0 bytes, main.o(.text))
+<P><STRONG><a name="[2b]"></a>GPIOF_Handler</STRONG> (Thumb, 156 bytes, Stack size 0 bytes, main.o(.text))
 <BR>[Address Reference Count : 1]<UL><LI> startup_tm4c123.o(RESET)
 </UL>
-<P><STRONG><a name="[10]"></a>GPIOD_Handler</STRONG> (Thumb, 48 bytes, Stack size 0 bytes, main.o(.text))
+<P><STRONG><a name="[10]"></a>GPIOD_Handler</STRONG> (Thumb, 120 bytes, Stack size 0 bytes, main.o(.text))
 <BR>[Address Reference Count : 1]<UL><LI> startup_tm4c123.o(RESET)
 </UL>
 <P><STRONG><a name="[9a]"></a>SW1_Init</STRONG> (Thumb, 104 bytes, Stack size 0 bytes, switch.o(.text))
@@ -1263,7 +1263,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[9e]"></a>pause</STRONG> (Thumb, 68 bytes, Stack size 8 bytes, microwave.o(.text))
+<P><STRONG><a name="[9e]"></a>pause</STRONG> (Thumb, 74 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = pause &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
@@ -1283,7 +1283,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
 </UL>
 
-<P><STRONG><a name="[a6]"></a>Check_Invalid</STRONG> (Thumb, 64 bytes, Stack size 0 bytes, microwave.o(.text))
+<P><STRONG><a name="[a6]"></a>Check_Invalid</STRONG> (Thumb, 100 bytes, Stack size 0 bytes, microwave.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 </UL>
 
@@ -1314,15 +1314,16 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[94]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;start
 </UL>
 
-<P><STRONG><a name="[94]"></a>start</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, microwave.o(.text))
+<P><STRONG><a name="[94]"></a>start</STRONG> (Thumb, 24 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 60<LI>Call Chain = start &rArr; Time_Display &rArr; End_Operation &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
-<BR>[Calls]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
+<BR>[Calls]<UL><LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WhiteOn
+<LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
 </UL>
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[92]"></a>Cook_Time</STRONG> (Thumb, 132 bytes, Stack size 16 bytes, microwave.o(.text))
+<P><STRONG><a name="[92]"></a>Cook_Time</STRONG> (Thumb, 136 bytes, Stack size 16 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 52 + In Cycle
 <LI>Call Chain = Cook_Time &rArr;  Cook_Time (Cycle)
 </UL>
@@ -1361,7 +1362,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[91]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 312 bytes, Stack size 56 bytes, microwave.o(.text))
+<P><STRONG><a name="[91]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 456 bytes, Stack size 56 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 92<LI>Call Chain = cook_Beef_or_Chicken &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dmul
@@ -1510,6 +1511,7 @@ Global Symbols
 <P><STRONG><a name="[9f]"></a>WhiteOn</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;End_Operation
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;pause
+<LI><a href="#[94]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;start
 </UL>
 
 <P><STRONG><a name="[e5]"></a>RedToggle</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, led.o(.text), UNUSED)
