mm-hmm Don't mind me

--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -22,11 +22,11 @@ compiling Interrupt.c...
 linking...
 Program Size: Code=5452 RO-data=652 RW-data=28 ZI-data=612  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-</pre>
-</body>
-</html>
-ect\\microwave.axf" 
+Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
 Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
 Programming Done.
 Verify OK.
+</pre>
+</body>
+</html>
