--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
+D:\#ASU\Repo\Project\microwave.uvproj
 Project File Date:  05/18/2022
 
 <h2>Output:</h2>
@@ -20,8 +20,10 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-Program Size: Code=5324 RO-data=652 RW-data=28 ZI-data=612  
+Program Size: Code=5332 RO-data=652 RW-data=28 ZI-data=612  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-</pre>
-</body>
-</html>
+Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
