--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -17,13 +17,26 @@ compiling LCD.c...
 compiling Keypad.c...
 compiling Buzzer.c...
 compiling Timer.c...
-compiling LED.c...
 compiling Interrupt.c...
+compiling LED.c...
 linking...
-Program Size: Code=5332 RO-data=652 RW-data=28 ZI-data=612  
+Program Size: Code=4676 RO-data=652 RW-data=28 ZI-data=516  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
+</pre>
+</body>
+</html>
+ect\\microwave.axf" 
 Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
 Programming Done.
 Verify OK.
+compiling Buzzer.c...
+compiling Timer.c...
+compiling Interrupt.c...
+compiling LED.c...
+linking...
+.\microwave.axf: Error: L6218E: Undefined symbol SW3_Input (referred from microwave.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 1 error messages.
+".\microwave.axf" - 1 Error(s), 2 Warning(s).
+Target not created
