--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,10 +3,30 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\ranah\OneDrive\Desktop\sr\Project\Project\microwave.uvproj
+D:\#ASU\Repo\Project\microwave.uvproj
 Project File Date:  05/18/2022
 
 <h2>Output:</h2>
+Rebuild target 'Target 1'
+assembling startup_TM4C123.s...
+compiling main.c...
+compiling Switch.c...
+compiling Tiva.c...
+compiling Microwave.c...
+compiling LCD.c...
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling LED.c...
+compiling Interrupt.c...
+linking...
+Program Size: Code=5408 RO-data=652 RW-data=28 ZI-data=612  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
+Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
 </pre>
 </body>
 </html>
