--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -4,11 +4,7 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 D:\#ASU\Repo\Project\microwave.uvproj
-<<<<<<< Updated upstream
-Project File Date:  05/17/2022
-=======
-Project File Date:  05/21/2022
->>>>>>> Stashed changes
+Project File Date:  05/24/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -24,17 +20,25 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-<<<<<<< Updated upstream
-Program Size: Code=5452 RO-data=652 RW-data=28 ZI-data=612  
-=======
-Program Size: Code=5476 RO-data=652 RW-data=28 ZI-data=612  
->>>>>>> Stashed changes
-".\microwave.axf" - 0 Error(s), 0 Warning(s).
-Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
+.\microwave.axf: Error: L6218E: Undefined symbol DOOR_OPEN (referred from main.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 1 error messages.
+".\microwave.axf" - 1 Error(s), 0 Warning(s).
+Target not created
 </pre>
 </body>
 </html>
+r: L6200E: Symbol SW1_Press_Counts multiply defined (by tiva.o and main.o).
+Not enough information to list image symbols.
+Not enough information to list the image map.
+Finished: 2 information, 0 warning and 4 error messages.
+".\microwave.axf" - 4 Error(s), 0 Warning(s).
+Target not created
+nterrupt.c...
+Interrupt.c(12): error:  #29: expected an expression
+  <<<<<<< Updated upstream
+Interrupt.c(19): error:  #29: expected an expression
+  =======
+Interrupt.c: 0 warnings, 2 errors
+".\microwave.axf" - 8 Error(s), 1 Warning(s).
+Target not created
