--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -20,25 +20,8 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-.\microwave.axf: Error: L6218E: Undefined symbol DOOR_OPEN (referred from main.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 1 error messages.
-".\microwave.axf" - 1 Error(s), 0 Warning(s).
-Target not created
+Program Size: Code=5432 RO-data=652 RW-data=28 ZI-data=612  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
-r: L6200E: Symbol SW1_Press_Counts multiply defined (by tiva.o and main.o).
-Not enough information to list image symbols.
-Not enough information to list the image map.
-Finished: 2 information, 0 warning and 4 error messages.
-".\microwave.axf" - 4 Error(s), 0 Warning(s).
-Target not created
-nterrupt.c...
-Interrupt.c(12): error:  #29: expected an expression
-  <<<<<<< Updated upstream
-Interrupt.c(19): error:  #29: expected an expression
-  =======
-Interrupt.c: 0 warnings, 2 errors
-".\microwave.axf" - 8 Error(s), 1 Warning(s).
-Target not created
