--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
+D:\#ASU\Repo\Project\microwave.uvproj
 Project File Date:  05/24/2022
 
 <h2>Output:</h2>
@@ -20,8 +20,13 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-Program Size: Code=5460 RO-data=652 RW-data=32 ZI-data=608  
+Program Size: Code=5472 RO-data=652 RW-data=32 ZI-data=608  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
+Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
 </pre>
 </body>
 </html>
