--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\ranah\OneDrive\Desktop\sr\Project\Project\microwave.uvproj
+F:\Mostafa\Microwave\Project\microwave.uvproj
 Project File Date:  05/25/2022
 
 <h2>Output:</h2>
