Add a condition and spacing

--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,10 +3,22 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-F:\Mostafa\Microwave\Project\microwave.uvproj
+D:\#ASU\Repo\Project\microwave.uvproj
 Project File Date:  05/25/2022
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
+Rebuild target 'Target 1'
+assembling startup_TM4C123.s...
+compiling main.c...
+compiling Switch.c...
+compiling Tiva.c...
+compiling Microwave.c...
+compiling LCD.c...
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling LED.c...
+compiling Interrupt.c...
+linking...
+Program Size: Code=5668 RO-data=652 RW-data=32 ZI-data=608  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
